workspace = { members = ["qevy-derive", "qevy-types"] }
[package]
name = "qevy"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/BrianWiz/qevy"
description = "Quake .map files for the Bevy game engine."
license = "MIT OR Apache-2.0"
keywords = ["quake", "bevy", "game", "engine", "map", "bsp"]
authors = ["Brian Howard <brian.howard@hey.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qevy-derive = { path = "qevy-derive" }
qevy-types = { path = "qevy-types" }

regex = "1.10.4"
bevy = "0.13.2"
async-lock = "3.3.0"
anyhow = "1.0.81"
ron = "0.8.1"
thiserror = "1.0.58"
usage = "1.4.0"

shalrath = "0.2.6"
shambler = { git = "https://github.com/BrianWiz/shambler.git" }
bevy_xpbd_3d = { version = "0.4.2", optional = true }
bevy_rapier3d = { version = "0.25.0", optional = true }
tracing = "0.1.40"
serde = { version = "1.0.197", features = ["derive"] }

[[example]]
name = "first_person"
required-features = ["xpbd"]

[[example]]
name = "exporting_config"
path = "examples/exporting_config.rs"

[features]
default = ["bevy_rapier3d"]
xpbd = ["bevy_xpbd_3d"]
rapier = ["bevy_rapier3d"]
