workspace = { members = ["qevy-derive", "qevy-types"] }
[package]
name = "qevy"
version = "0.3.0"
edition = "2021"
repository = "https://github.com/BrianWiz/qevy"
description = "Quake .map files for the Bevy game engine."
license = "MIT OR Apache-2.0"
keywords = ["quake", "bevy", "game", "engine", "map", "bsp"]
authors = [
    "BrianWiz <https://github.com/BrianWiz>", 
    "Zwazel <https://github.com/zwazel>",
    "Coreh <https://github.com/coreh>",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.14.2"
qevy-derive = { path = "qevy-derive" }
qevy-types = { path = "qevy-types" }
anyhow = "1.0.89"
async-lock = "3.4.0"
regex = "1.10.6"
ron = "0.8.1"
thiserror = "1.0.63"
usage = "1.4.0"
shalrath = "0.2.6"
shambler = "0.2.0"
avian3d = { version = "0.1.2", optional = true }
bevy_rapier3d = { version = "0.27.0", optional = true }
tracing = "0.1.40"
serde = { version = "1.0.210", features = ["derive"] }

[[example]]
name = "first_person"

[[example]]
name = "exporting_config"
path = "examples/exporting_config.rs"

[features]
default = ["rapier"]
avian = ["avian3d"]
rapier = ["bevy_rapier3d"]
